[package]
name = "otp_rs"
version = "1.0.1"
edition = "2021"
description = "A text based one time pad library"
license = "LGPL-3.0-or-later"
repository = "https://github.com/JamesClarke7283/otp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror = "1.0.48"
